--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
                         <div class="services__icon">
                             <div class="services__box"></div>
-                            <i class="ri-layout-4-line"></i>
+                            <i class="ri-pages-fill"></i>
                         </div>
 
                         <h3 class="services__title">
@@ -221,7 +221,7 @@
 
                         <div class="services__icon">
                             <div class="services__box"></div>
-                            <i class="ri-layout-4-line"></i>
+                            <i class="ri-code-line"></i>
                         </div>
 
                         <h3 class="services__title">
@@ -289,8 +289,8 @@
                     </h3>
 
                     <p class="projects__description">
-                        Project that you carry out in the design and structure of the layout, showing the design at the
-                        client's request.
+                        Get Nothing is a revolutionary platform that allows you to subscribe to nothing. Yes, you read
+                        that correctly.
                     </p>
 
                     <div class="projects__links">
@@ -311,7 +311,8 @@
 
                     <div class="projects__img">
                         <img src="images\christmas__page.png" alt="" class="projects__image">
-                        <a target="_blank" href="https://ramoslourdes.github.io/Christmas_project/" class="projects__button">
+                        <a target="_blank" href="https://ramoslourdes.github.io/Christmas_project/"
+                            class="projects__button">
                             <i class="ri-arrow-right-up-line"></i>
                         </a>
                     </div>
@@ -325,8 +326,8 @@
                     </h3>
 
                     <p class="projects__description">
-                        Project that you carry out in the design and structure of the layout, showing the design at the
-                        client's request.
+                        Bring the holiday spirit to your code with XmasMagic! This lightweight project adds a sprinkle
+                        of Christmas joy to your digital world.
                     </p>
 
                     <div class="projects__links">
@@ -345,7 +346,7 @@
 
                 </div>
 
-                
+
             </div>
 
         </section>
